Get rid of transition to avoid flickering container boxes when just the container status changes

--- a/hawtio-web/src/main/webapp/css/site-base.less
+++ b/hawtio-web/src/main/webapp/css/site-base.less
@@ -1579,4 +1579,5 @@ td.adding {
 
 .child-container {
   margin-left: 2em;
+  transition: none;
 }
